--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.js",
-    "src/**/*.jsx",
-    "SuanFa/combinationSum.ts"
+    "src/**/*.jsx"
+    // "SuanFa/*.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
